# nodi

./: .eslintrc.js  .firebase.env.example.js  .gitignore  README.md  cors.example.json  firestore.indexes.json  firestore.rules  jest.config.js  nuxt.config.js  package-lock.json  package.json  storage.rules  tsconfig.json
.github/: dependabot.yml
.github/workflows/: deploy.yml  main.yml  test.yml
assets/json/: description.json
assets/styles/: editor.scss  viewer.scss
components/common/: Files.vue  Footer.vue  GDPR.vue  Header.vue  LogoFooter.vue  MypageMenu.vue  Nodes.vue
components/editor/: Collaborator.vue  FileDrawer.vue  GraphSearchTooltip.vue  GroupContextTooltip.vue  IOContextTooltip.vue  IOInspectorTooltip.vue  NodeContextTooltip.vue  NodeHierarchyList.vue  NodeInspectorTooltip.vue  NodeSearchBox.vue  NodeSearchTooltip.vue  ShareWindow.vue  Tooltip.vue
components/misc/: Spinner.vue  (+1 more)
core/: .eslintrc.js  .gitignore  .npmignore  README.md  index.ts  jest.config.js  package.json  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
jest/: MockModule.js
layouts/: default.vue
pages/: index.vue  search.vue
plugins/: firebase.ts
preprocess/: barrel.mjs
store/: index.ts  user.ts
types/: @jscad__csg.d.ts  @primer__octicons.d.ts  dxf.d.ts  img.d.ts  index.d.ts  noisejs.d.ts  shader.d.ts  svg.d.ts  worker-loader.d.ts
wasm/marching-cubes/: Cargo.toml
wasm/marching-cubes/src/: lib.rs
web/: .eslintrc.js  .gitignore  README.md  firebase.json  firestore.indexes.json  jest.config.js  nuxt.config.js  package.json
(+980 files in other folders)
